--- a/DedicateDB/GBGamesServer/DemoDB.csproj
+++ b/DedicateDB/GBGamesServer/DemoDB.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="EntityFramework" Version="6.5.1" />
     <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.3.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.2" />
   </ItemGroup>
 
 </Project>
